casos totais e taxas de novos casos

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <main class="container">
     <h1>COVID19 por Estado</h1>
+    <div id="casesState" style="width:600px;height:450px;"></div>
+    <div id="casesRateState" style="width:600px;height:450px;"></div>
     <div id="deathsState" style="width:600px;height:450px;"></div>
 
     <div id="deathRateState" style="width:600px;height:450px;"></div>
