--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <div id="deathsState" style="width:600px;height:450px;"></div>
 
     <div id="deathRateState" style="width:600px;height:450px;"></div>
+    <div id="casesRateStateCompare" style="width:600px;height:450px;"></div>
+
 
     <script type="text/javascript" src="js/read-csv.js"></script>
     <script type="text/javascript" src="js/principal.js"></script>
