--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <head>
     <script src="js/plotly-latest.min.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/site.css">
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -8,16 +10,24 @@
 
 <body>
     <main class="container">
-    <h1>COVID19 por Estado</h1>
-    <div id="casesState" style="width:600px;height:450px;"></div>
-    <div id="casesRateState" style="width:600px;height:450px;"></div>
-    <div id="deathsState" style="width:600px;height:450px;"></div>
+        <header>
+            <h1>Monitoramento de casos de COVID19 na Bahia</h1>
+        </header>
+        <section id="cases" >
+            
+            <div id="casesState" class="plots" ></div>
+           
 
-    <div id="deathRateState" style="width:600px;height:450px;"></div>
-    <div id="casesRateStateCompare" style="width:600px;height:450px;"></div>
+        </section>
+        <section id="deaths">
+            <div id="deathsState" class="plots"></div>
 
+        </section>
+        <section id="casesCompare">
+            <div id="casesRateStateCompare" class="plots"></div>
+        </section>
 
-    <script type="text/javascript" src="js/read-csv.js"></script>
-    <script type="text/javascript" src="js/principal.js"></script>
-</main>
+        <script type="text/javascript" src="js/read-csv.js"></script>
+        <script type="text/javascript" src="js/principal.js"></script>
+    </main>
 </body>
