--- a/index.html
+++ b/index.html
@@ -30,4 +30,7 @@
         <script type="text/javascript" src="js/read-csv.js"></script>
         <script type="text/javascript" src="js/principal.js"></script>
     </main>
+    <footer class="container">
+        <p>Dados de <a href="https://covid19br.wcota.me/"> Wesley Cota </a></p>
+    </footer>
 </body>
