--- a/index.html
+++ b/index.html
@@ -13,10 +13,18 @@
         <header>
             <h1>Monitoramento de casos de COVID19 na Bahia</h1>
         </header>
-        <section id="cases" >
-            
-            <div id="casesState" class="plots" ></div>
-           
+        <section id="cases">
+            <div class="row">
+                <div class="col-sm">
+                    <div id="casesTotState"></div>
+                </div>
+
+                <div class="col-sm">
+                    <div id="casesRateState"></div>
+                </div>
+            </div>
+        </section>
+
 
         </section>
         <section id="deaths">
