--- a/index.html
+++ b/index.html
@@ -28,11 +28,23 @@
 
         </section>
         <section id="deaths">
-            <div id="deathsState" class="plots"></div>
-
+            <div class="row">
+                <div class="col-sm">
+                    <div id="deathsTotState"></div>
+                </div>
+                <div class="col-sm">
+                    <div id="deathsRateState" ></div>
+                </div>
+            </div>
         </section>
+
         <section id="casesCompare">
-            <div id="casesRateStateCompare" class="plots"></div>
+            <div class="row">
+                <div class="col-sm">
+                    <div id="casesRateStateCompare"></div>
+                </div>
+            </div>
+
         </section>
 
         <script type="text/javascript" src="js/read-csv.js"></script>
