--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
                     <div id="casesRateStateCompare"></div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-sm">
+                    <div id="casesMMRateStateCompare"></div>
+                </div>
+            </div>
 
         </section>
 
