--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <main class="container">
         <header>
-            <h1>Monitoramento de casos de COVID19 na Bahia</h1>
+            <h1 class="center">Monitoramento de casos de COVID19 na Bahia</h1>
         </header>
         <section id="cases">
             <div class="row">
